--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser-ads",
   "author": "OrangeGames",
-  "version": "0.6.7",
+  "version": "0.7.0-alpha1",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
