--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser-ads",
   "author": "OrangeGames",
-  "version": "1.0.0-alpha13",
+  "version": "1.0.0",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
