--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser-ads",
   "author": "OrangeGames",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
@@ -20,6 +20,7 @@
     }
   ],
   "devDependencies": {
+    "@types/es6-promise": "0.0.32",
     "grunt": "0.4.x",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "0.6.0",
@@ -27,7 +28,9 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ts": "^6.0.0-beta.3",
+    "grunt-tslint": "^3.3.0",
     "phaser": "2.6.2",
+    "tslint": "^3.15.1",
     "typescript": "2.0.x"
   },
   "engines": {
