--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phaser-ads",
+  "name": "@orange-games/phaser-ads",
   "author": "OrangeGames",
   "version": "1.0.2",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
