--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser-ads",
   "author": "OrangeGames",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
@@ -19,6 +19,14 @@
       "url": "https://github.com/orange-games/phaser-ads/raw/master/LICENSE"
     }
   ],
+  "bugs": [
+    {
+      "url": "https://github.com/orange-games/phaser-ads/issues"
+    }
+  ],
+  "config": {
+    "name": "phaser-ads"
+  },
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
     "grunt": "0.4.x",
@@ -31,9 +39,6 @@
     "grunt-tslint": "^3.3.0",
     "phaser": "2.6.2",
     "tslint": "^3.15.1",
-    "typescript": "2.0.x"
-  },
-  "engines": {
-    "node": "5.x.x"
+    "typescript": "2.1.x"
   }
 }
