--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   },
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
-    "grunt": "0.4.x",
+    "grunt": "1.0.x",
     "grunt-banner": "^0.6.0",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-clean": "1.0.x",
+    "grunt-contrib-connect": "1.0.x",
+    "grunt-contrib-uglify": "2.0.x",
+    "grunt-contrib-watch": "1.0.x",
     "grunt-ts": "^6.0.0-beta.3",
     "grunt-tslint": "^3.3.0",
     "phaser": "2.6.2",
