--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
         "removeComments": false,
         "declaration": true,
         "preserveConstEnums": true
-    }
+    },
+    "include": [
+        "./ts/**/*.ts"
+    ]
 }
