--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@orange-games/phaser-ads",
   "author": "OrangeGames",
-  "version": "2.2.8-alpha.1",
+  "version": "2.3.0-alpha.1",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
@@ -29,16 +29,16 @@
   },
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
-    "grunt": "1.0.x",
+    "grunt": "^1.0.3",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "1.0.x",
-    "grunt-contrib-connect": "1.0.x",
+    "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-uglify": "2.0.x",
-    "grunt-contrib-watch": "1.0.x",
-    "grunt-ts": "^6.0.0-beta.16",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-ts": "^6.0.0-beta.22",
     "grunt-tslint": "^3.3.0",
     "phaser": "2.6.2",
     "tslint": "^3.15.1",
-    "typescript": "^2.4.2"
+    "typescript": "^2.9.2"
   }
 }
