--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@azerion/phaser-ads",
   "author": "Azerion",
-  "version": "2.3.0-alpha.1",
+  "version": "2.3.0",
   "description": "A Phaser plugin for providing nice ads integration in your phaser.io game",
   "contributors": [
     {
@@ -29,10 +29,10 @@
   },
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
-    "grunt": "^1.0.3",
+    "grunt": "^1.0.4",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "1.0.x",
-    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-connect": "^2.1.0",
     "grunt-contrib-uglify": "2.0.x",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-ts": "^6.0.0-beta.22",
